k8s/ffmpeg-chunker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ffmpeg-chunker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ffmpeg-chunker
  template:
    metadata:
      labels:
        app: ffmpeg-chunker
    spec:
      containers:
      - name: ffmpeg-chunker
        image: ghcr.io/scalable-23t1-p2-toktik/ffmpeg-worker/scalable-p2-ffmpeg-chunker:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: ffmpeg-storage
          mountPath: /pv
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: ffmpeg-storage
        persistentVolumeClaim:
          claimName: ffmpeg-pvc
