k8s/ffmpeg-converter-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ffmpeg-converter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ffmpeg-converter
  template:
    metadata:
      labels:
        app: ffmpeg-converter
    spec:
      containers:
      - name: ffmpeg-converter
        image: ghcr.io/scalable-23t1-p2-toktik/ffmpeg-worker/scalable-p2-ffmpeg-converter:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: ffmpeg-storage
          mountPath: /pv
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: ffmpeg-storage
        persistentVolumeClaim:
          claimName: ffmpeg-pvc
