k8s/ffmpeg-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ffmpeg
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ffmpeg
  template:
    metadata:
      labels:
        app: ffmpeg
    spec:
      containers:
      - name: ffmpeg
        image: ghcr.io/scalable-23t1-p2-toktik/ffmpeg-worker/scalable-p2-ffmpeg-worker:latest
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
