k8s/ffmpeg-thumbnailer-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ffmpeg-thumbnailer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ffmpeg-thumbnailer
  template:
    metadata:
      labels:
        app: ffmpeg-thumbnailer
    spec:
      containers:
      - name: ffmpeg-thumbnailer
        image: ghcr.io/scalable-23t1-p2-toktik/ffmpeg-worker/scalable-p2-ffmpeg-thumbnailer:latest
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
