k8s/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        volumeMounts:
        - name: postgres-pv
          mountPath: "/var/lib/mysql"
        ports:
        - containerPort: 5433

      volumes:
      - name: postgres-pv
        persistentVolumeClaim:
          claimName: postgres-pvc
