k8s/frontend-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
