k8s/notification-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: notification
spec:
  selector:
    app: notification
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
